--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   google_fonts: ^6.2.1
   carousel_slider: ^4.2.1
+  shared_preferences: ^2.2.3
+  provider: ^6.1.2
+  dio: ^5.4.3+1
 
 dev_dependencies:
   flutter_test:
